applications/software/home1/syncthing/routing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
spec:
  selector:
    app: syncthing
  ports:
  - name: web
    port: 8384
    targetPort: 8384
  - name: sync-tcp
    port: 22000
    targetPort: 22000
    protocol: TCP
  - name: sync-udp
    port: 22000
    targetPort: 22000
    protocol: UDP
  - name: discovery
    port: 21027
    targetPort: 21027
    protocol: UDP
  type: ClusterIP
