applications/software/home1/syncthing/routing/httproute-web.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing-web
spec:
  parentRefs:
  - name: kgateway
    namespace: kgateway
    sectionName: https
  hostnames:
  - "syncthing.yewolf.fr"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: ak-outpost-proxy
      namespace: authentik
      port: 9000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /outpost.goauthentik.io
  - backendRefs:
    - group: ""
      kind: Service
      name: syncthing
      port: 8384
      weight: 1
    timeouts:
      request: 0s
      backendRequest: 0s
    matches:
    - path:
        type: PathPrefix
        value: /
