applications/software/home1/syncthing/routing/route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: syncthing
spec:
  parentRefs:
  - group: gateway.networking.x-k8s.io
    kind: XListenerSet
    name: syncthing
    sectionName: sync
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: syncthing
      port: 22000
      weight: 1
